--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^18.0.11",
     "axios": "^1.3.4",
     "d3": "7.8.2",
+    "js-cookie": "^3.0.1",
     "luxon": "^3.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
