authentication, lots of changes

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -8,6 +8,15 @@ h3archive {
   }
 
   sessions {
-    secret = ${JWT_SECRET}
+    secret = ${?JWT_SECRET}
+  }
+
+  youtube {
+    apiKey = ${?YOUTUBE_API_KEY}
+  }
+
+  spotify {
+    clientId = ${?SPOTIFY_CLIENT_ID}
+    clientSecret = ${?SPOTIFY_CLIENT_SECRET}
   }
 }
