Index youtube videos and match them to spotify episodes Index transcriptions! and display them in the UI

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -19,4 +19,9 @@ h3archive {
     clientId = ${?SPOTIFY_CLIENT_ID}
     clientSecret = ${?SPOTIFY_CLIENT_SECRET}
   }
+
+  transcription {
+    bin = ${?TRANSCRIPTION_BIN}
+    working-dir = ${?TRANSCRIPTION_WORKING_DIR}
+  }
 }
