--- a/app/package.json
+++ b/app/package.json
@@ -26,6 +26,10 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.4",
+    "react-virtualized-auto-sizer": "^1.0.12",
+    "react-window": "^1.8.8",
+    "react-window-infinite-loader": "^1.0.8",
     "react-youtube": "^10.1.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
